force-app/main/default/objects/Campaign_Detail__c/Campaign_Detail__c.object-meta.xml
<CustomObject>
    <label>Campaign Detail</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>Campaign Detail No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>