force-app/main/default/objects/Campaign_Detail__c/fields/ACCOUNT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_NUMBER__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ACCOUNT NUMBER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>