force-app/main/default/objects/Campaign_Detail__c/fields/Alamat__c.field-meta.xml
<CustomField>
    <fullName>Alamat__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alamat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>