force-app/main/default/objects/Campaign_Detail__c/fields/Alamat_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Alamat_Merchant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Alamat Merchant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>