force-app/main/default/objects/Campaign_Detail__c/fields/Baki_Debet__c.field-meta.xml
<CustomField>
    <fullName>Baki_Debet__c</fullName>
    <label>Baki Debet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>