force-app/main/default/objects/Campaign_Detail__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Campaign Details</relationshipLabel>
    <relationshipName>Campaign_Details</relationshipName>
    <type>Lookup</type>
</CustomField>