force-app/main/default/objects/Campaign_Detail__c/fields/CELLPHONE_BRINETS__c.field-meta.xml
<CustomField>
    <fullName>CELLPHONE_BRINETS__c</fullName>
    <label>CELLPHONE BRINETS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>