force-app/main/default/objects/Campaign_Detail__c/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CIF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>