force-app/main/default/objects/Campaign_Detail__c/fields/CIF_BRINETS__c.field-meta.xml
<CustomField>
    <fullName>CIF_BRINETS__c</fullName>
    <label>CIF BRINETS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>