force-app/main/default/objects/Campaign_Detail__c/fields/Compare__c.field-meta.xml
<CustomField>
    <fullName>Compare__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Compare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>