force-app/main/default/objects/Campaign_Detail__c/fields/created__c.field-meta.xml
<CustomField>
    <fullName>created__c</fullName>
    <label>created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>