force-app/main/default/objects/Campaign_Detail__c/fields/Deskripsi__c.field-meta.xml
<CustomField>
    <fullName>Deskripsi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deskripsi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>