force-app/main/default/objects/Campaign_Detail__c/fields/Device_ID__c.field-meta.xml
<CustomField>
    <fullName>Device_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Device ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>