force-app/main/default/objects/Campaign_Detail__c/fields/Dial_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Dial_Phone_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dial Phone No</label>
    <type>Phone</type>
</CustomField>