force-app/main/default/objects/Campaign_Detail__c/fields/Dukcapil__c.field-meta.xml
<CustomField>
    <fullName>Dukcapil__c</fullName>
    <label>Dukcapil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>