force-app/main/default/objects/Campaign_Detail__c/fields/Face__c.field-meta.xml
<CustomField>
    <fullName>Face__c</fullName>
    <label>Face</label>
    <length>255</length>
    <type>Text</type>
</CustomField>