force-app/main/default/objects/Campaign_Detail__c/fields/Home_City__c.field-meta.xml
<CustomField>
    <fullName>Home_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>