force-app/main/default/objects/Campaign_Detail__c/fields/Jenis__c.field-meta.xml
<CustomField>
    <fullName>Jenis__c</fullName>
    <label>Jenis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>