force-app/main/default/objects/Campaign_Detail__c/fields/Jenis_Kartu__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Kartu__c</fullName>
    <label>Jenis Kartu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>