force-app/main/default/objects/Campaign_Detail__c/fields/Kabupaten__c.field-meta.xml
<CustomField>
    <fullName>Kabupaten__c</fullName>
    <label>Kabupaten</label>
    <length>255</length>
    <type>Text</type>
</CustomField>