force-app/main/default/objects/Campaign_Detail__c/fields/Kantor_Cabang__c.field-meta.xml
<CustomField>
    <fullName>Kantor_Cabang__c</fullName>
    <label>Kantor Cabang</label>
    <length>255</length>
    <type>Text</type>
</CustomField>