force-app/main/default/objects/Campaign_Detail__c/fields/Karakter_Nasabah__c.field-meta.xml
<CustomField>
    <fullName>Karakter_Nasabah__c</fullName>
    <label>Karakter Nasabah</label>
    <length>255</length>
    <type>Text</type>
</CustomField>