force-app/main/default/objects/Campaign_Detail__c/fields/Kecamatan__c.field-meta.xml
<CustomField>
    <fullName>Kecamatan__c</fullName>
    <label>Kecamatan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>