force-app/main/default/objects/Campaign_Detail__c/fields/Kelurahan__c.field-meta.xml
<CustomField>
    <fullName>Kelurahan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kelurahan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>