force-app/main/default/objects/Campaign_Detail__c/fields/KET_MCC__c.field-meta.xml
<CustomField>
    <fullName>KET_MCC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KET_MCC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>