force-app/main/default/objects/Campaign_Detail__c/fields/Kode_Kanca__c.field-meta.xml
<CustomField>
    <fullName>Kode_Kanca__c</fullName>
    <label>Kode Kanca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>