force-app/main/default/objects/Campaign_Detail__c/fields/Kode_Uker__c.field-meta.xml
<CustomField>
    <fullName>Kode_Uker__c</fullName>
    <label>Kode Uker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>