force-app/main/default/objects/Campaign_Detail__c/fields/KTP__c.field-meta.xml
<CustomField>
    <fullName>KTP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>