force-app/main/default/objects/Campaign_Detail__c/fields/Liveness__c.field-meta.xml
<CustomField>
    <fullName>Liveness__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Liveness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>