force-app/main/default/objects/Campaign_Detail__c/fields/Nama_Kanca__c.field-meta.xml
<CustomField>
    <fullName>Nama_Kanca__c</fullName>
    <label>Nama Kanca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>