force-app/main/default/objects/Campaign_Detail__c/fields/Nama_Kanwil__c.field-meta.xml
<CustomField>
    <fullName>Nama_Kanwil__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nama Kanwil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>