force-app/main/default/objects/Campaign_Detail__c/fields/Nama_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Nama_Merchant__c</fullName>
    <label>Nama Merchant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>