force-app/main/default/objects/Campaign_Detail__c/fields/Nama_Uker__c.field-meta.xml
<CustomField>
    <fullName>Nama_Uker__c</fullName>
    <label>Nama Uker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>