force-app/main/default/objects/Campaign_Detail__c/fields/NAMA_USER_PEMRAKARSA__c.field-meta.xml
<CustomField>
    <fullName>NAMA_USER_PEMRAKARSA__c</fullName>
    <label>NAMA USER PEMRAKARSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>