force-app/main/default/objects/Campaign_Detail__c/fields/NAME_BRINETS__c.field-meta.xml
<CustomField>
    <fullName>NAME_BRINETS__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NAME BRINETS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>