force-app/main/default/objects/Campaign_Detail__c/fields/NIK__c.field-meta.xml
<CustomField>
    <fullName>NIK__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NIK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>