force-app/main/default/objects/Campaign_Detail__c/fields/Nominal_Pengajuan__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Pengajuan__c</fullName>
    <label>Nominal Pengajuan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>