force-app/main/default/objects/Campaign_Detail__c/fields/Nomor__c.field-meta.xml
<CustomField>
    <fullName>Nomor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nomor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>