force-app/main/default/objects/Campaign_Detail__c/fields/Nomor_Kartu__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Kartu__c</fullName>
    <label>Nomor Kartu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>