force-app/main/default/objects/Campaign_Detail__c/fields/Nomor_Laporan__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Laporan__c</fullName>
    <label>Nomor Laporan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>