force-app/main/default/objects/Campaign_Detail__c/fields/Nomor_Trouble_Tiket_Bricare_Pengaduan__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Trouble_Tiket_Bricare_Pengaduan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nomor Trouble Tiket Bricare (Pengaduan)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>