force-app/main/default/objects/Campaign_Detail__c/fields/Office_Address__c.field-meta.xml
<CustomField>
    <fullName>Office_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>