force-app/main/default/objects/Campaign_Detail__c/fields/Outbound_Category__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Category__c</fullName>
    <label>Outbound Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Hard to contact</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Not Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>