force-app/main/default/objects/Campaign_Detail__c/fields/Outbound_Category_Detail__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Category_Detail__c</fullName>
    <label>Outbound Category Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Outbound_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Big Interest</fullName>
            </value>
            <value>
                <fullName>Nasabah setuju atau tertarik dengan program yang ditawarkan</fullName>
            </value>
            <value>
                <fullName>Bunga 0%</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Miss Customer</fullName>
            </value>
            <value>
                <fullName>Nomor yang dihubungi salah sambung</fullName>
            </value>
            <value>
                <fullName>Data tidak sesuai (verifikasi)</fullName>
            </value>
            <value>
                <fullName>Available limit tidak mencukupi</fullName>
            </value>
            <value>
                <fullName>Nada sambung tidak terangkat (Not Answer)</fullName>
            </value>
            <value>
                <fullName>Mailbox</fullName>
            </value>
            <value>
                <fullName>Busy</fullName>
            </value>
            <value>
                <fullName>Admin terlalu tinggi</fullName>
            </value>
            <value>
                <fullName>belum memiliki dana</fullName>
            </value>
            <value>
                <fullName>Bunga terlalu Tinggi</fullName>
            </value>
            <value>
                <fullName>Dana yang ditawarkan kecil</fullName>
            </value>
            <value>
                <fullName>Dana yang ditransfer terlalu sedikit</fullName>
            </value>
            <value>
                <fullName>Hanya ingin mencoba</fullName>
            </value>
            <value>
                <fullName>Masih banyak cicilan</fullName>
            </value>
            <value>
                <fullName>Nasabah Full Payment</fullName>
            </value>
            <value>
                <fullName>Nasabah merasa tidak mengajukan</fullName>
            </value>
            <value>
                <fullName>Nasabah membatalkan proses pengajuan</fullName>
            </value>
            <value>
                <fullName>Nasabah tidak mau dikonfirmasi</fullName>
            </value>
            <value>
                <fullName>Pembayaran Min Payment</fullName>
            </value>
            <value>
                <fullName>Promo tidak menarik</fullName>
            </value>
            <value>
                <fullName>Tidak membutuhkan dana</fullName>
            </value>
            <value>
                <fullName>Tidak memiliki rekening BRI</fullName>
            </value>
            <value>
                <fullName>Tidak merasa melakukan transaksi</fullName>
            </value>
            <value>
                <fullName>Via Aplikasi</fullName>
            </value>
            <value>
                <fullName>Via Call Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>