force-app/main/default/objects/Campaign_Detail__c/fields/Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Outstanding__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outstanding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>