force-app/main/default/objects/Campaign_Detail__c/fields/pic_merchant__c.field-meta.xml
<CustomField>
    <fullName>pic_merchant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>pic merchant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>