force-app/main/default/objects/Campaign_Detail__c/fields/Plafond__c.field-meta.xml
<CustomField>
    <fullName>Plafond__c</fullName>
    <label>Plafond</label>
    <length>255</length>
    <type>Text</type>
</CustomField>