force-app/main/default/objects/Campaign_Detail__c/fields/PN_USER_PEMRAKARSA__c.field-meta.xml
<CustomField>
    <fullName>PN_USER_PEMRAKARSA__c</fullName>
    <label>PN USER PEMRAKARSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>