force-app/main/default/objects/Campaign_Detail__c/fields/Program_Atau_Promo__c.field-meta.xml
<CustomField>
    <fullName>Program_Atau_Promo__c</fullName>
    <label>Program Atau Promo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>