force-app/main/default/objects/Campaign_Detail__c/fields/Program_atau_Promo_untuk_Customer__c.field-meta.xml
<CustomField>
    <fullName>Program_atau_Promo_untuk_Customer__c</fullName>
    <label>Program atau Promo untuk Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>