force-app/main/default/objects/Campaign_Detail__c/fields/Program_atau_Promo_untuk_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Program_atau_Promo_untuk_Merchant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Program atau Promo untuk Merchant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>