force-app/main/default/objects/Campaign_Detail__c/fields/Rekening_RDN__c.field-meta.xml
<CustomField>
    <fullName>Rekening_RDN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rekening RDN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>