force-app/main/default/objects/Campaign_Detail__c/fields/Rekening_Tabungan__c.field-meta.xml
<CustomField>
    <fullName>Rekening_Tabungan__c</fullName>
    <label>Rekening Tabungan BRI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>