force-app/main/default/objects/Campaign_Detail__c/fields/Rekom_Plafon_Max__c.field-meta.xml
<CustomField>
    <fullName>Rekom_Plafon_Max__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rekom Plafon Max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>