force-app/main/default/objects/Campaign_Detail__c/fields/Rekom_Rate_Bulan__c.field-meta.xml
<CustomField>
    <fullName>Rekom_Rate_Bulan__c</fullName>
    <label>Rekom Rate / Bulan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>