force-app/main/default/objects/Campaign_Detail__c/fields/Rekom_Tenor_Max__c.field-meta.xml
<CustomField>
    <fullName>Rekom_Tenor_Max__c</fullName>
    <label>Rekom Tenor Max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>