force-app/main/default/objects/Campaign_Detail__c/fields/Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Response Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>