force-app/main/default/objects/Campaign_Detail__c/fields/Response_Desc__c.field-meta.xml
<CustomField>
    <fullName>Response_Desc__c</fullName>
    <label>Response Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>