force-app/main/default/objects/Campaign_Detail__c/fields/Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Sales_Volume__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>