force-app/main/default/objects/Campaign_Detail__c/fields/SID__c.field-meta.xml
<CustomField>
    <fullName>SID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>