force-app/main/default/objects/Campaign_Detail__c/fields/Sisa_Fasilitas__c.field-meta.xml
<CustomField>
    <fullName>Sisa_Fasilitas__c</fullName>
    <label>Sisa Fasilitas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>