force-app/main/default/objects/Campaign_Detail__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>