force-app/main/default/objects/Campaign_Detail__c/fields/Status_Privy__c.field-meta.xml
<CustomField>
    <fullName>Status_Privy__c</fullName>
    <label>Status Privy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>