force-app/main/default/objects/Campaign_Detail__c/fields/Status_Transaksi__c.field-meta.xml
<CustomField>
    <fullName>Status_Transaksi__c</fullName>
    <label>Status Transaksi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>