force-app/main/default/objects/Campaign_Detail__c/fields/Tanggal_Pengajuan__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Pengajuan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tanggal Pengajuan</label>
    <type>Date</type>
</CustomField>