force-app/main/default/objects/Campaign_Detail__c/fields/Tanggal_Register__c.field-meta.xml
<CustomField>
    <fullName>Tanggal_Register__c</fullName>
    <label>Tanggal Register BRIMO</label>
    <type>Date</type>
</CustomField>