force-app/main/default/objects/Campaign_Detail__c/fields/TID__c.field-meta.xml
<CustomField>
    <fullName>TID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>