force-app/main/default/objects/Campaign_Detail__c/fields/Tiering_SV__c.field-meta.xml
<CustomField>
    <fullName>Tiering_SV__c</fullName>
    <label>Tiering SV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>