force-app/main/default/objects/Campaign_Detail__c/fields/Tindaklanjut_RM__c.field-meta.xml
<CustomField>
    <fullName>Tindaklanjut_RM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tindaklanjut RM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>