force-app/main/default/objects/Campaign_Detail__c/fields/TRX_Date__c.field-meta.xml
<CustomField>
    <fullName>TRX_Date__c</fullName>
    <label>TRX Date</label>
    <type>Date</type>
</CustomField>