force-app/main/default/objects/Campaign_Detail__c/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>userId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>